[gd_scene load_steps=5 format=3 uid="uid://cv4ka6uu2ddt3"]

[ext_resource type="Script" path="res://scripts/client_1.gd" id="1_cbvcf"]
[ext_resource type="Texture2D" uid="uid://bl4i86kwuxydq" path="res://assets/background/tattoo studio.png" id="2_nbig4"]
[ext_resource type="Texture2D" uid="uid://dvbk55kwwaqnj" path="res://assets/sprites/characters/taylor.png" id="3_6kuyl"]
[ext_resource type="FontFile" uid="uid://djd71xqk81edx" path="res://assets/fonts/Kenney Mini Square Mono.ttf" id="4_rxhoy"]

[node name="Client1" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_cbvcf")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_nbig4")

[node name="TextureRect2" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -243.0
offset_top = -327.0
grow_horizontal = 0
grow_vertical = 0
texture = ExtResource("3_6kuyl")

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 7.0
offset_top = 492.0
offset_right = 1303.0
offset_bottom = 648.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("4_rxhoy")
theme_override_font_sizes/font_size = 32
text = "Me gustar√≠a una flor de las praderas,
Adornando mis posaderas"

[node name="NextChar" type="Timer" parent="."]

[connection signal="timeout" from="NextChar" to="." method="_on_next_char_timeout"]
